Working for implementation specific tests Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>