@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>io.smallrye</groupId>
         <artifactId>smallrye-graphql-parent-1.0</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    
+
     <artifactId>smallrye-graphql-tck-1.0</artifactId>
-    
+
     <name>SmallRye: MicroProfile GraphQL TCK</name>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -40,7 +40,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
@@ -71,14 +71,15 @@
         </dependency>
         
         <dependency>
-            <groupId>org.jboss.shrinkwrap</groupId>
-            <artifactId>shrinkwrap-api</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>io.smallrye</groupId>
             <artifactId>smallrye-graphql-1.0</artifactId>
         </dependency>
+        
+<!--        <dependency>
+            <groupId>io.leangen.graphql</groupId>
+            <artifactId>spqr</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>-->
 
         <dependency>
             <groupId>io.smallrye</groupId>
@@ -96,38 +97,16 @@
             <artifactId>arquillian-testng-container</artifactId>
             <scope>test</scope>
         </dependency>
-        
     </dependencies>
-    
-    
+
     <profiles>
-        
-        <profile>
-            <id>thorntail</id>
-            <activation>
-                <!--<activeByDefault>true</activeByDefault>-->
-                <property>
-                   <name>thorntail</name>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>io.thorntail</groupId>
-                    <artifactId>arquillian</artifactId>
-                    <version>2.2.0.Final</version>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-            
-        </profile>
-        <!-- Test on wildfly -->
         <profile>
             <id>wildfly-servlet</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
-<!--                <property>
-                   <name>wildfly-servlet</name>
-                </property>-->
+                <property>
+                    <!-- use property rather than activeByDefault, see https://issues.apache.org/jira/browse/MNG-4917 -->
+                    <name>!noWildflyServlet</name>
+                </property>
             </activation>
             <dependencies>
                 <dependency>
@@ -142,6 +121,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <systemProperties>
+                                <jboss.options>${jboss.extra.opts}</jboss.options>
+                            </systemProperties>
                             <environmentVariables>
                                 <JBOSS_HOME>${project.build.directory}/wildfly-servlet-${version.wildfly}</JBOSS_HOME>
                             </environmentVariables>
@@ -175,7 +157,14 @@
                 </plugins>
             </build>
         </profile>
-        
+        <profile>
+            <id>jdk11plus</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+            </properties>
+        </profile>
     </profiles>
-    
 </project>
